--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,105 @@
+body {
+  margin: 0;
+  padding: 0;
+}
+
 .App {
-  text-align: center;
+  min-height: 100vh; /* Set a minimum height to fill the viewport */
+  position: relative; /* Ensure relative positioning */
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  padding: 20px 0;
+  background-color: #333;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-between; /* Distribute items along the header */
+  align-items: center; /* Vertically center items */
+}
+
+.header-brand {
+  font-size: 36px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.header-buttons {
+  display: flex;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header-button {
+  font-size: 18px;
+  padding: 10px 20px;
+  margin: 0 5px; /* Add margin between buttons */
 }
+.footer {
+  background-color: #333;
+  color: white;
+  text-align: center;
+  padding: 20px 0;
+  position: relative; /* Change to relative positioning */
+  width: 100%;
+  margin-top: auto; /* Add margin-top to push footer down */
+}
+
+.footer-content {
+  max-width: 600px;
+  margin: 0 auto;
+}
+/* Home.css */
+/* Home.css */
+
+.home-container {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  text-align: center;
+}
+
+.home-container h2 {
+  font-size: 28px; /* Increase font size for the header */
+  margin-bottom: 20px;
+}
+
+.home-container img {
+  max-width: 100%;
+  height: auto; /* Maintain aspect ratio */
+  margin-top: 20px; /* Add space between text and image */
+}
+/* Contact.css */
+
+.contact-container {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  text-align: left;
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+label {
+  font-weight: bold;
+}
+
+.form-control {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+textarea {
+  resize: vertical;
+}
+
+.btn-primary {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
